# frydea

./: .env.sample  .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  rollup.config.js
frydea/: __init__.py  database.py  models.py  preflight.css  views.py
frydea/components/: app.fry  data.js  frydea.js
frydea/web/: __init__.py  app.fry  auth.fry  edit.fry  frydea.js  index.fry  preview.fry
public/: bundle.js  bundle.js.map  index.html  style.css
public/codemirror/lib/: codemirror.js
src/: main.js
